
 - Change the docknot.yaml field orphaned to unmaintained, and change the
   templates to say the package is not maintained instead of orphaned.
   This terminology is more precise and less metaphorical.

 - Remove support information from the README.md and README templates for
   packages that are no longer maintained, and adjust some of the wording
   there and in the thread template.

 - Fix typo in README.md template for ExtUtils::MakeMaker packages.

 - Fix the URL in the footer added by docknot spin to point to DocKnot
   instead of my old web tools page.

7.01 - 2022-01-19

 - Correctly handle Unicode output from commands run by pointers and from
   POD processing by Pod::Thread.  Previous versions since 6.01 were
   double-encoding.  Thanks to Julien ÉLIE for the report.

 - Follow symlinks to ordinary files in docknot spin, just not
   directories.  The Path::Iterator::Rule conversion in 6.01 broke copying
   of files referenced by symlink.

 - The \size spin always used 1024-based units.  It now correctly uses the
   KiB, MiB, etc. abbreviations to match.

7.00 - 2022-01-17

 - Various module APIs now take Path::Tiny objects instead of string
   paths.  Roughly, any module API that is not called directly by
   App::DocKnot::Command now expects paths in the form of Path::Tiny
   objects and does not always do an explicit conversion.

 - Fix Unicode handling in App::DocKnot::Spin::Thread methods.  Output to
   files was handled correctly in most cases, but output to a scalar or to
   standard output was not, nor was output to a file when the input was
   generated by another program.

 - Fix processing of old-style pointers in docknot spin.

 - Fix import error when running docknot release.

 - Fix .versions updating via docknot release when the package that needs
   to be udpated is not the first line of the file.

 - When spinning an input tree, process all .rss files first in a separate