@@ -36,7 +36,8 @@
 </tr></table>
 
 <address>
-    Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
-    %DATE% from thread modified %DATE%
+  Last <a href="https://www.eyrie.org/~eagle/software/docknot/">spun</a>
+  %DATE% from thread modified %DATE%
+</address>
 </body>
 </html>
